# nlp-playground

./: .gitignore  Dockerfile  Justfile  pyproject.toml  ruff.toml  test.csv
nlp_playground/: hello_world_torch.py  neural_network_hello_word.py
nlp_playground/utils/: settings.py
notebooks/: makemore_pt1.ipynb  makemore_pt2_mlp.ipynb  makemore_pt3_activation_gradient_batchnorm copy.ipynb  makemore_pt3_activation_gradient_batchnorm.ipynb  makemore_pt4_becoming_backprop_ninja.ipynb  micrograd.ipynb
notebooks/price_cube/: clustering.py  constants.py  dataset_generation.ipynb  dataset_generation.py  dataset_visualization.ipynb  enums.py  environment.py  function_optimization.ipynb  models.py  utils.py
notebooks/price_cube/dataset/: price_cube.csv  price_cube.parquet  products.csv  products.parquet
notebooks/price_cube/json/: dashboard_plots.json  dashboard_table.json  dendrogram.json  modal_sku_data.json  pricing_optimization_recap.json
